# audio_video_batch

./: Cargo.toml  README.md
src/: audio_processor.rs  batch_processor.rs  config.rs  frame_analyzer.rs  main.rs  ml_backend.rs  progress.rs  synchronizer.rs  video_processor.rs
video-audio-processor/: Dockerfile  Dockerfile.onnx  Dockerfile.pytorch  Dockerfile.web  docker-build.sh  docker-compose.yml  docker-run.sh
